[AndroidSms] Fix issues with messages commandline url override.

This CL adds a new commandline arg for the android messages PWA
installation url. Also fixed issue with localhost urls crashing
PWA installation. Fixed this by not passing secure flag for cookies
when setting it on localhost urls.

Bug: 904686
Change-Id: Ib084c554b8977d5f60a288935ce5fad384a1281c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1524901
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Azeem Arshad <azeemarshad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#640939}