chrome/browser/chromeos/android_sms/android_sms_app_setup_controller_impl.cc
@@ -23,6 +23,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/content_settings/core/browser/host_content_settings_map.h"
 #include "content/public/browser/browser_context.h"
 #include "content/public/browser/storage_partition.h"
+#include "net/base/url_util.h"
 #include "services/network/public/mojom/cookie_manager.mojom.h"
 #include "url/gurl.h"
 
@@ -86,9 +87,9 @@ void AndroidSmsAppSetupControllerImpl::SetUpApp(const GURL& app_url,
               kDefaultToPersistCookieValue, std::string() /* domain */,
               std::string() /* path */, base::Time::Now() /* creation_time */,
               base::Time() /* expiration_time */,
-              base::Time::Now() /* last_access_time */, true /* secure */,
-              false /* http_only */, net::CookieSameSite::STRICT_MODE,
-              net::COOKIE_PRIORITY_DEFAULT),
+              base::Time::Now() /* last_access_time */,
+              !net::IsLocalhost(app_url) /* secure */, false /* http_only */,
+              net::CookieSameSite::STRICT_MODE, net::COOKIE_PRIORITY_DEFAULT),
           "https", false /* modify_http_only */,
           base::BindOnce(&AndroidSmsAppSetupControllerImpl::
                              OnSetRememberDeviceByDefaultCookieResult,
@@ -273,9 +274,9 @@ void AndroidSmsAppSetupControllerImpl::OnAppUninstallResult(
               std::string() /* domain */, std::string() /* path */,
               base::Time::Now() /* creation_time */,
               base::Time() /* expiration_time */,
-              base::Time::Now() /* last_access_time */, true /* secure */,
-              false /* http_only */, net::CookieSameSite::STRICT_MODE,
-              net::COOKIE_PRIORITY_DEFAULT),
+              base::Time::Now() /* last_access_time */,
+              !net::IsLocalhost(app_url) /* secure */, false /* http_only */,
+              net::CookieSameSite::STRICT_MODE, net::COOKIE_PRIORITY_DEFAULT),
           "https", false /* modify_http_only */,
           base::BindOnce(
               &AndroidSmsAppSetupControllerImpl::OnSetMigrationCookieResult,
