chrome/browser/chromeos/android_sms/android_sms_switches.cc
@@ -9,4 +9,7 @@ namespace switches {
 
 const char kAlternateAndroidMessagesUrl[] = "alternate-android-messages-url";
 
+const char kAlternateAndroidMessagesInstallUrl[] =
+    "alternate-android-messages-install-url";
+
 }  // namespace switches
